--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": ">=7.0.0",
+    "@angular/animations": "7.2.13",
     "@angular/cdk": "7.3.7",
     "@angular/common": "^7.2.5",
     "@angular/compiler": "^7.2.5",
